plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'citi.equities'
version = '1.0-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

configurations {
    all*.exclude group: 'org.springframework.cloud', module: 'spring-cloud-starter-sleuth'
    all*.exclude group: 'io.github.openfeign', module: 'feign-jackson'
    all*.exclude group: 'commons-jxpath', module: 'commons-jxpath'
    all*.exclude group: 'org.springdoc', module: 'springdoc-openapi-common'
    all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'
    all*.exclude group: 'org.springframework.data', module: 'spring-data-jpa'
}

configurations.configureEach {
    resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    resolutionStrategy {
        force "org.springframework:spring-beans:${springVersion}"
        force "org.springframework:spring-tx:${springVersion}"
        force "org.springframework:spring-jcl:${springVersion}"
        force "org.springframework:spring-core:${springVersion}"
        force "org.springframework:spring-context:${springVersion}"
        force "org.springframework:spring-expression:${springVersion}"

        force "org.springframework.boot:spring-boot:${springBootVersion}"
        force "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}"
        force "org.springframework.boot:spring-boot-starter:${springBootVersion}"
        force "org.springframework.boot:spring-boot-starter-cache:${springBootVersion}"
        force "org.springframework.boot:spring-boot-starter-logging:${springBootVersion}"
        force "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"

        force "org.springframework.security:spring-security-crypto:6.1.0"
        force "org.springframework.integration:spring-integration-jmx:6.1.0"
        force "org.springframework.integration:spring-integration-kafka:6.1.0"
    }
}

sourceSets {
    main {
        java {
            srcDirs 'src/main/java'
        }
        resources {
            srcDirs 'src/main/resources'
        }
    }
    test {
        java {
            srcDirs 'src/test/java'
        }
        resources {
            srcDirs 'src/test/resources'
        }
    }
}

dependencies {
    // Testing
    implementation 'org.testng:testng:7.4.0'
    implementation 'io.rest-assured:rest-assured:5.3.0'

    // Spring & Spring Cloud
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.0.3'
    implementation 'org.springframework.cloud:spring-cloud-starter-config:4.0.3'
    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.3.0'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:4.0.3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter:3.1.0'

    // Database & Rules Engine
    implementation 'io.github.openfeign:feign-jackson:9.7.0'
    implementation 'com.deliveredtechnologies:rulebook-core:0.+'
    implementation 'net.sourceforge.jtds:jtds:1.3.1'
    implementation 'org.mybatis:mybatis:3.5.2'
    implementation 'org.postgresql:postgresql:42.7.2'
    implementation 'org.apache.ignite:ignite-core:2.9.1'
    implementation 'org.apache.ignite:ignite-indexing:2.9.1'
    implementation 'org.apache.commons:commons-dbcp2:2.12.0'
    implementation 'org.apache.commons:commons-text:1.12.0'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.3.0.jre17-preview'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'jakarta.activation:jakarta.activation-api:2.1.2'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

    // Authentication / Tools
    implementation 'com.auth0:java-jwt:3.11.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    testCompileOnly 'org.projectlombok:lombok:1.18.28'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'

    // JSON
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.github.f4b6a3:ulid-creator:4.2.1'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.0'
    implementation 'com.alibaba:fastjson:2.0.37'
    implementation 'org.dom4j:dom4j:2.1.4'
    implementation 'net.javacrumbs.json-unit:json-unit:2.17.0'
    implementation 'org.apache.commons:commons-jexl:2.1.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'

    // Logging & Others
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
    implementation 'com.github.jsqlparser:jsqlparser:4.9'
    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:2.1.0'
    implementation 'org.springframework.retry:spring-retry:2.0.9'
    implementation "org.springframework.boot:spring-boot-starter-aop:${springBootVersion}"
    implementation 'io.github.resilience4j:resilience4j-retry:2.3.0'

    // SLF4J
    implementation 'org.slf4j:slf4j-api:2.0.9'
}

test {
    systemProperty "spring.application.name", "eh-api"
    systemProperty "spring.cloud.config.name", "mondo-testing-api-service"
    systemProperty "server.home", "."
    systemProperty "spring.cloud.bootstrap.location", project.projectDir.toString() + "/eh-bootstrap/config/"
    systemProperty "spring.profiles.active", "emeauat"
    systemProperty "javax.net.ssl.trustStore", "cacert/cacerts"
    systemProperty "javax.net.ssl.trustStorePassword", "changeit"

    useTestNG { suites "testng.xml" }
}

tasks.withType(Test).configureEach {
    jvmArgs = jvmArgs + ['--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.io=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.nio=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang=ALL-UNNAMED']
    jvmArgs = jvmArgs + ['--add-opens=java.base/java.net=ALL-UNNAMED']
}

bootRun {
    mainClass = 'citi.equities.lifecycleqa.EHAPISpringApplication'
    jvmArgs = [
        '-Dspring.application.name=eqd-testops-eh-api-svc',
        '-Dspring.cloud.config.name=mondo-testing-api-service',
        '-Dspring.profiles.active=emeauat',
        '-Dspring.cloud.config.fail-fast=false',
        '-Dspring.cloud.config.discovery.enabled=false',
        '-Dserver.home=.',
        '-Dserver.port=8084',
        '--add-opens=java.base/jdk.internal.access=ALL-UNNAMED',
        '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
        '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
        '--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED',
        '--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
        '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
        '--add-opens=java.base/java.io=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED',
        '--add-opens=java.base/java.net=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
        '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
        '--add-opens=java.base/java.math=ALL-UNNAMED',
        '--add-opens=java.sql/java.sql=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens=java.base/java.time=ALL-UNNAMED',
        '--add-opens=java.base/java.text=ALL-UNNAMED',
        '--add-opens=java.management/sun.management=ALL-UNNAMED',
        '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
        '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
        '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
    ]
}

jar {
    enabled = true
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

bootJar {
    archiveFileName = "app.jar"
    launchScript { properties "mode": "run" }
}

springBoot {
    buildInfo {
        properties {
            version = project.findProperty("citi.buildVersion") ?: "unknown"
        }
    }
}
